# opencode-provider-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  crates-publish.yml  npm-publish.yml  release.yml
.sisyphus/plans/: 001-opencode-provider-manager.md  002-phase4-5-completion.md
crates/app/: Cargo.toml
crates/app/src/: actions.rs  error.rs  import.rs  lib.rs  state.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  parser.rs  status.rs
crates/config-core/: Cargo.toml
crates/config-core/src/: jsonc.rs  lib.rs  merge.rs  paths.rs  schema.rs  validate.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: cache.rs  lib.rs  models_dev.rs  provider_api.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/tui/: Cargo.toml
crates/tui/src/: event.rs  lib.rs  main.rs  tui_app.rs  ui.rs
crates/tui/src/app/: actions.rs  error.rs  import.rs  mod.rs  state.rs
crates/tui/src/auth/: error.rs  mod.rs  parser.rs  status.rs
crates/tui/src/config_core/: error.rs  jsonc.rs  merge.rs  paths.rs  schema.rs  validate.rs
crates/tui/src/discovery/: cache.rs  error.rs  mod.rs  models_dev.rs  provider_api.rs
npm/: install.js  package.json  run.js
