[package]
name = "discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
config-core = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
