[package]
name = "opencode-provider-manager-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standalone GUI binary crate for managing OpenCode provider configs"
repository.workspace = true

[[bin]]
name = "opm-gui"
path = "src/main.rs"

[dependencies]
"opencode-provider-manager" = { path = "../tui", version = "0.1.3" }
egui = { workspace = true }
eframe = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
