[package]
name = "opencode-provider-manager-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "opm"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
config-core = { workspace = true }
discovery = { workspace = true }
auth = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }