[package]
name = "opencode-provider-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TUI/CLI binary crate for managing OpenCode provider configs"
repository.workspace = true

[[bin]]
name = "opm"
path = "src/main.rs"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
jsonc-parser = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
